# elf

./: .gitignore  .gitmodules  LICENSE  README.md  README_helios.md  agent.sh  bench.py  config.yaml  dp_train.sh  engine.py  example.py  fullsweep.py  helios.sh  interleaving.py  main.py  mypipe.py  nn.py  pipeline.py  pipelined.py  profile.sh  profiler.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  schedule.py  settings.py  start.sh  sweep.py  sweep.sh  sweep.yaml  tensors.py  test.py  test.sh  test_model.py  test_partition.py  tests.py  torch-bench.py  torchpipe.py  train_llama.py  (+2 more)
benchmarks/: bench_gpt.py  bench_gpt.sh  bench_nvmodels.py  bench_nvmodels.sh  benchmark_utils.py  compare_attention_block.py  compare_attentions.py  compare_attentions.sh  compare_frameworks.py  compare_schedules.py  compare_with_torch.py  compare_with_torch.sh  deepspeed_transformer.py  greedy_mfu.sh  ilp_schedulers.py  ilps_guided_benchmark.py  llama.py  profiling.py  profiling_pytorch.py  run_transformer.py  zb_schedulers.py
config/: dataset_config.yaml  gpt_config.yaml  helios.md  phase_config.yaml  resnet_config.yaml  train_llm.yaml  train_test_config.yaml  train_vision.yaml
docs/: advanced_usage.rst  conf.py  index.rst  jean-zay.md  requirements.txt
elf/: __init__.py  block.py  comm_scheduling.py  engine.py  pipeline.py  registry.py  remat.py  schedules.py  scheduling.py  utils.py  zb_utils.py
examples/: basic.py  basic_no_partition.py  demo.py  new_config.py  run_unet.py  train_fno.py  train_llm.py  train_vision.py
fno/: Snakefile  benchmark.py  profile_comms.py  (+1 more)
(+241 files in other folders)
